# dynaddrmgr

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG-dev.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml  roaming-config.yaml  scratch-roaming.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst
dynaddrmgr/: __init__.py  app.py  cli.py  constants.py  dynhost.py  dynrules.py  dyntmpls.py  foos.py  fwhdlr.py  kinds.py  rule.py  singles.py  tmplmgr.py  ufw.py
scripts/: scratch.py
tests/: conftest.py  test_cli.py  test_dynrules.py  test_dyntmpls.py
tests/data/: 00-defaults-vultr.conf.j2  00-defaults.local  README.md  access-wtf-trusted.conf  access_wtf_trusted.conf.j2  dynaddrmgr.dns  dynaddrmgr.yaml  dynaddrmgr.yaml.j2  etc.hosts  fw-before.txt  resolv.conf  ufw.status  ufw.status.after  ufw.status.before
