[tool.poetry]
name = "dynaddrmgr"
description = "Tools to manage actions based on dynamic host address changes."
version = "0.6.0"
license = "MIT"

authors = [
  "Quien Sabe <qs5779@mail.com>",
]

readme = "README.md"

repository = "https://github.com/wtfo-guru/dynaddrmgr"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.poetry.scripts]
dyntmplmgr = "dynaddrmgr.dyntmpls:main"
dynfwrules = "dynaddrmgr.dynrules:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.0"
nslookup = "^1.7.0"
wtforglib = ">=1.0.1"
jinja2 = "^3.1.2"
dnspython = "^2.4.2"
loguru = "^0.7.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^0.19"
flake8-pytest-style = ">=1.6,<3.0"
doc8 = "^1.0"
nitpick = "^0.35"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
testfixtures = ">=7.1,<9.0"
black = ">=23.3,<25.0"
isort = "^5.13"
requests-cache = ">=0.9,<1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.23,<3.0"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
