[project]
name = "dynaddrmgr"
description = "Tools to manage actions based on dynamic host address changes."
license = "MIT"
keywords = []
version = "0.8.2"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'click (>=8.1.0,<9.0.0)',
  'nslookup (>=1.7.0,<2.0.0)',
  'wtforglib (>=1.2.1)',
  'jinja2 (>=3.1.2,<4.0.0)',
  'dnspython (>=2.4.2,<3.0.0)',
  "dailylog-lib (>=0.2.2,<0.3.0)",
]

[project.urls]
repository = "https://github.com/wtfo-guru/dynaddrmgr"

[project.scripts]
dyntmplmgr = "dynaddrmgr.dyntmpls:main"
dynfwrules = "dynaddrmgr.dynrules:main"

[tool.poetry]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.0.0"
wemake-python-styleguide = "^1.0"
doc8 = "^1.0"
pytest = ">=7.4,<9.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.12"
testfixtures = ">=7.1,<9.0"
black = "^25.0"
isort = "^6.0"
requests-cache = ">=0.9,<1.3"
flake8-pytest-style = "^2.1.0"
pyfakefs = "^5.7.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
sphinx_mdinclude = "^0.6.2"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
